# sulci

./: .envrc  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LOCAL_SETUP.md  Makefile  NOTICE  README.md  pyproject.toml  setup.py  setup.sh  smoke_test.py  smoke_test_async.py  smoke_test_langchain.py  smoke_test_llamaindex.py
.github/workflows/: benchmark.yml  publish.yml  tests.yml
benchmark/: .gitignore  README.md  baseline.json  run.py
docs/: multi_tenancy_and_isolation.md  protocols.md
examples/: anthropic_example.py  async_example.py  basic_usage.py  context_aware.py  context_aware_example.py  langchain_example.py  llamaindex_example.py
examples/extending_sulci/: README.md  custom_backend.py
scripts/: README.md  _make_issues.py  _make_more_issues.py  _make_web_issue.py  _make_web_step_d_issues.py  _update_contributing_v2.py  run_examples.py  run_tests_per_file.py  verify_benchmark.py  verify_integration_examples.py
sulci/: __init__.py  async_cache.py  config.py  core.py  oss_connect.py  telemetry.py
sulci/backends/: __init__.py  chroma.py  cloud.py  faiss.py  milvus.py  protocol.py  qdrant.py  redis.py  sqlite.py
sulci/embeddings/: __init__.py  minilm.py  openai.py  protocol.py
sulci/integrations/: __init__.py  langchain.py  llamaindex.py
sulci/sessions/: __init__.py  memory.py  protocol.py  redis.py
sulci/sinks/: __init__.py  null.py  protocol.py  redis_stream.py  telemetry.py
sulci/tests/compat/: conftest.py  test_event_sink_conformance.py  test_session_store_conformance.py
tests/: conftest.py  test_async_cache.py  test_backends.py  test_cloud_backend.py  test_config.py  test_connect.py  test_core.py  test_integrations_langchain.py  test_integrations_llamaindex.py  test_nudge.py  test_oss_connect.py  test_qdrant_tenant_isolation.py  test_session_store_injection.py  test_sessions.py  test_sinks.py  test_telemetry.py  test_telemetry_gateway_override.py  test_telemetry_lifecycle.py
tests/compat/: __init__.py  conftest.py  test_backend_conformance.py  test_embedder_conformance.py
tests/integration/flows/: flow_1.py  flow_2.py  flow_2_e2e.py  flow_2_routemismatch.py  flow_3.py  flow_cli_devicecode.py  test_flow_contracts.py
